test post added, sahir posts deleted

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -106,7 +106,7 @@
 
     </div>
 	&nbsp;
-    <p>&copy; Sahir Bhatnagar. Powered by <a href="http://jekyllrb.com/">jekyll</a>, <a href="http://getpoole.com/">poole</a>, 
+    <p>&copy; Sameer Bhatnagar. Powered by <a href="http://jekyllrb.com/">jekyll</a>, <a href="http://getpoole.com/">poole</a>, 
           <a href="http://yihui.name/knitr/">knitr</a>,
           <a href="http://johnmacfarlane.net/pandoc/">pandoc</a>, and <a href="https://github.com/sahirbhatnagar/sahirbhatnagar.github.io">GitHub</a>.</p>
 	</div>
