--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   	{% include head.html %}
 	{% include google_analytics.html %}
 
-  <body class="layout-reverse">
+  <body class="theme-base-08">
 
     {% include sidebar.html %}
 
